[project]
name = "heasarc_retrieve_pipeline"
description = "Pipeline to automatically retrieve data from HEASARC"
readme = "README.rst"
requires-python = ">=3.8"
license = { file = "licenses/LICENSE.rst", content-type = "text/plain" }
authors = [
  { name = "Matteo Bachetti", email = "matteo@matteobachetti.it" },
]
dependencies = [

]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-doctestplus",
]
docs = [
    "sphinx",
    "sphinx-automodapi",
    "tomli; python_version <\"3.11\"",
]


[project.scripts]
astropy_package_template_example = "heasarc_retrieve_pipeline.example_mod:main"


[project.urls]
repository = "http://github.com/matteobachetti/heasarc_retrieve_pipeline"

[build-system]
requires = [
  "setuptools>=61.2",
  "setuptools_scm[toml]>=3.4",
  "wheel",

]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]

[tool.setuptools_scm]
write_to = "heasarc_retrieve_pipeline/version.py"

[tool.pytest.ini_options]
testpaths = [
  "heasarc_retrieve_pipeline",
  "docs",
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"

[tool.coverage.run]
omit = [
 "heasarc_retrieve_pipeline/__init*",
 "heasarc_retrieve_pipeline/conftest.py",
 "heasarc_retrieve_pipeline/*setup_package*",
 "heasarc_retrieve_pipeline/tests/*",
 "heasarc_retrieve_pipeline/*/tests/*",
 "heasarc_retrieve_pipeline/extern/*",
 "heasarc_retrieve_pipeline/version*",
 "*/heasarc_retrieve_pipeline/__init*",
 "*/heasarc_retrieve_pipeline/conftest.py",
 "*/heasarc_retrieve_pipeline/*setup_package*",
 "*/heasarc_retrieve_pipeline/tests/*",
 "*/heasarc_retrieve_pipeline/*/tests/*",
 "*/heasarc_retrieve_pipeline/extern/*",
 "*/heasarc_retrieve_pipeline/version*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  "def main(.*):",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
]